# robo-broomba

./: .gitignore  CMakeLists.txt  README.md  sys_config.json  tasks.json
app/main/: main_app.cpp  main_app.hpp
app/src/: app_swc1.cpp
app/utilities/: datapool.cpp  datapool.hpp  datatypes.hpp
core/pygen/: sysgen.py
device/inc/: device.hpp  device_types.hpp  encoder_drv.hpp  motor_diff_drv.hpp
device/src/: device.cpp  encoder_drv.cpp  motor_diff_drv.cpp
